# fula-blockchain

./: README.md
fula_blockchain/: .env.sample  Cargo.toml  README.md
fula_blockchain/chain_metadata/: substrate_contracts_node_local.scale
fula_blockchain/src/: block.rs  config.rs  main.rs
fula_token/: .env.sample  .gitignore  Cargo.toml  README.md  package.json  redspot.config.ts
fula_token/contracts/proxy/: Cargo.toml  lib.rs
fula_token/contracts/token/: .gitignore  Cargo.toml  lib.rs
fula_token/scripts/: 01_token_code.ts  02_proxy.ts  03_setup.ts  constants.ts  deploy.ts
fula_token/tests/: helpers.ts  token.test.ts
