[package]
name = "fula_token"
version = "0.1.0"
authors = ["4ire <oleksandr.mykhailenko@4irelabs.com>"]
edition = "2021"

[dependencies]
ink_primitives = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { tag = "v3.0.0", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

brush = { git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp22", "ownable"]}

[lib]
name = "fula_token"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_metadata",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
    "brush/std"
]
ink-as-dependency = []
